--- a/static/css/sass/_landing.scss
+++ b/static/css/sass/_landing.scss
@@ -48,8 +48,8 @@
     @extend %button-hover;
 }
 
-@media only screen and (max-width: 650px) {
+/* @media only screen and (max-width: 650px) {
     .carousel-item {
         height: 400px;
     }
-}
+} */
