--- a/static/css/sass/_nav.scss
+++ b/static/css/sass/_nav.scss
@@ -153,7 +153,7 @@
 
 .line2 {
     width: 31.82px;
-    height: 3px;
+    height: 2px;
     background: $secondary-color;
     margin-top: 7px;
 }
@@ -175,7 +175,7 @@
 }
 
 .toggle .line3 {
-    transform: rotate(45deg) translate(-7px, -8px);
+    transform: rotate(45deg) translate(-6px, -8px);
 }
 
 a.user-link, a.bag-link {
