--- a/static/css/sass/styles.scss
+++ b/static/css/sass/styles.scss
@@ -62,6 +62,10 @@ h1 {
     /* font-family: $main-font; */
     font-weight: bold;
     font-size: 1.75rem;
+    width: calc(100vw - 90px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0.5rem 2rem;
 }
 
 .heading-underline {
@@ -276,6 +280,11 @@ label:hover:before {
     display: none;
 }
 
+// Overriding default z-index on focus, causing issue with appearing over nav
+.input-group-append .btn:focus, .input-group-prepend .btn:focus {
+    z-index: 2;
+}
+
 @media only screen and (max-width: 600px) {
     .bg {
         left: 0;
@@ -285,7 +294,8 @@ label:hover:before {
     }
 
     .heading h1 {
-        font-size: 1.75rem;
+        font-size: 1.5rem;
+        width: revert;
     }
 }
 
